<resources>
    <string name="app_name">Friends Keep</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="want_to_delete_your_friend"> Do you really want to delete your friend</string>
    <string name="friend_name">Friend Name</string>
    <string name="birth_date">Birth date</string>
    <string name="fav_color">Favorite Color</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="sure">Sure</string>
    <string name="cancel">Cancel</string>
    <string name="friend_removed">Friend removed</string>
    <string name="choose_favortie_color">Choose favorite color</string>
    <string name="undo">Undo</string>
    <string name="add_more">add more …</string>
    <!--    RELEASE-->
    <string name="upperPageBanner" translatable="false">ca-app-pub-5792349830504043/5833566638</string>

    <!--    DEBUG-->
    <!--    <string name="upperPageBanner">ca-app-pub-3940256099942544/6300978111</string>-->

    <string name="please_select_img">Please add an image!</string>
    <string name="enter_friend_name">Please enter friend name</string>
    <string name="select_bd">Please select the friend birth date</string>
    <string name="add_new_favorite">Add new Favorite</string>
    <string name="favorite_category">Favorite Category</string>
</resources>