<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.view.FriendFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_4sdp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/delete_friend"
                    android:layout_width="@dimen/_32sdp"
                    android:layout_height="@dimen/_32sdp"
                    android:contentDescription="@string/delete"
                    android:src="@drawable/ic_baseline_delete_24"
                    android:visibility="gone" />

                <ImageView
                    android:id="@+id/edit_friend"
                    android:layout_width="@dimen/_32sdp"
                    android:layout_height="@dimen/_32sdp"
                    android:contentDescription="@string/edit"
                    android:src="@drawable/ic_baseline_mode_edit_24"
                    android:visibility="gone" />

                <ImageView
                    android:id="@+id/fav_friend"
                    android:layout_width="@dimen/_32sdp"
                    android:layout_height="@dimen/_32sdp"
                    android:src="@drawable/ic_baseline_star_border_24"
                    android:visibility="gone" />


            </LinearLayout>

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/friend_image"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_baseline_person_24"
                app:civ_border_color="#000000"
                app:civ_border_width="3dp"
                app:layout_column="0"
                app:layout_row="0" />

            <androidx.cardview.widget.CardView
                android:id="@+id/nameCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/friend_image"
                android:layout_margin="12dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="8dp"
                app:layout_column="0"
                app:layout_columnWeight="1"
                app:layout_gravity="fill"
                app:layout_row="0"
                app:layout_rowWeight="1">

                <EditText
                    android:id="@+id/nameEt"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_below="@id/friend_image"
                    android:layout_centerHorizontal="true"
                    android:layout_marginStart="@dimen/_12sdp"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:layout_marginEnd="@dimen/_12sdp"
                    android:layout_marginBottom="@dimen/_8sdp"
                    android:background="#fff"
                    android:enabled="false"
                    android:hint="@string/friend_name"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/birthdateCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/nameCard"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="8dp"
                app:layout_column="1"
                app:layout_columnWeight="1"
                app:layout_gravity="fill"
                app:layout_row="0"
                app:layout_rowWeight="1">

                <EditText
                    android:id="@+id/birthDateEt"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_below="@id/nameEt"
                    android:layout_centerHorizontal="true"
                    android:layout_marginStart="@dimen/_12sdp"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:layout_marginEnd="@dimen/_12sdp"
                    android:layout_marginBottom="@dimen/_8sdp"
                    android:background="#fff"
                    android:enabled="false"
                    android:hint="@string/birth_date"
                    android:textColor="@color/black"
                    android:textStyle="bold" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/favColorCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/birthdateCard"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="12dp"
                android:layout_marginBottom="@dimen/_8sdp"
                app:cardCornerRadius="8dp"
                app:cardElevation="8dp"
                app:layout_column="0"
                app:layout_columnWeight="1"
                app:layout_gravity="fill"
                app:layout_row="1"
                app:layout_rowWeight="1">

                <EditText
                    android:id="@+id/favColorEt"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_below="@id/birthDateEt"
                    android:layout_centerHorizontal="true"
                    android:layout_marginStart="@dimen/_12sdp"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:layout_marginEnd="@dimen/_12sdp"
                    android:layout_marginBottom="@dimen/_8sdp"
                    android:background="#fff"
                    android:enabled="false"
                    android:hint="@string/fav_color"
                    android:textColor="@color/black"
                    android:textStyle="bold" />
            </androidx.cardview.widget.CardView>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerview_id"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/favColorCard"
                android:layout_marginTop="@dimen/_8sdp"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                app:spanCount="2"
                tools:listitem="@layout/card_item" />

            <Button
                android:id="@+id/addAttrBtn"
                android:layout_width="@dimen/_200sdp"
                android:layout_height="wrap_content"
                android:layout_below="@id/recyclerview_id"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:layout_marginEnd="@dimen/_8sdp"
                android:layout_marginBottom="@dimen/_8sdp"
                android:background="@drawable/btn_shape"
                android:text="add more ..."
                android:textAllCaps="false"
                android:textSize="@dimen/_14sdp"
                app:backgroundTint="@null" />

            <ImageView
                android:id="@+id/add_imageView"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignEnd="@id/friend_image"
                android:layout_alignBottom="@id/friend_image"
                app:srcCompat="@drawable/ic_camera" />

        </RelativeLayout>

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/actionBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:layout_marginEnd="@dimen/_12sdp"
        android:layout_marginBottom="@dimen/_12sdp"
        android:src="@drawable/ic_add"
        app:backgroundTint="@color/purple_200"
        app:tint="@color/white" />

</RelativeLayout>

